<resources>
    <string name="app_name">Diary</string>
    <string name="title">Diary</string>
    <string name="add">New</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Diary</string>
    <string name="list">List</string>
    <string name="calendar">Calendar</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="opensource_license">Open source license</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="account_setting">Account setting</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>"
    <string name="register">Register</string>
    <string name="user">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="reset_password">Reset password</string>
    <string name="verification">Verification</string>
    <string name="confirm_password">Confirm password</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="activity_edit_hint">Content</string>
    <string name="activity_feedback_menu_send">Send</string>
    <string name="nickname">Nickname</string>
    <string name="about_author">Author:  pkhope</string>
    <string name="about_content">This is my first production in my spare time\n,There are still many deficiencies, will slowly improve later</string>
    <string name="email">Email:  hhxnbw@163.com</string>
    <string name="blog">My blog:  http://pkhope.github.io</string>
</resources>
