<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lly_nav"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/bg_setting"/>

            <LinearLayout
                android:id="@+id/lly_setting"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/nav_item_selector"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_settings"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/setting"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="8dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_help"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_help"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/help"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="8dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_feedback"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_send"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/feedback"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="8dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_license"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_share"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/opensource_license"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="8dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_about"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_about"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="8dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
